[gd_scene load_steps=5 format=3 uid="uid://dcnar8cy6ooyf"]

[ext_resource type="Script" uid="uid://cyr80yk4begho" path="res://scene/menu_principal.gd" id="1_yhypf"]
[ext_resource type="Texture2D" uid="uid://kjmrfapcview" path="res://Assets/art/Paralax/far city background/-4.png" id="3_5u8x2"]
[ext_resource type="Texture2D" uid="uid://bn5el6ben6bsq" path="res://Assets/art/UI/MenuBasuraPrincipal_es.png" id="4_5u8x2"]
[ext_resource type="Texture2D" uid="uid://nr73mhsob5pq" path="res://Assets/art/Paralax/far city background/-5.png" id="4_7xc4s"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhypf")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.186
anchor_right = 0.837
anchor_bottom = 0.369
offset_left = -0.272003
offset_right = -0.223999
offset_bottom = -0.112015
grow_horizontal = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "TITULO_MAIN"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Opciones" type="VBoxContainer" parent="."]
visible = false
show_behind_parent = true
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -20.0
offset_right = 50.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="OptionButton" type="OptionButton" parent="Opciones"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Catala"
popup/item_0/id = 0
popup/item_1/text = "Espa√±ol"
popup/item_1/id = 1
popup/item_2/text = "Ingles"
popup/item_2/id = 2
popup/item_3/text = "Portugues"
popup/item_3/id = 3

[node name="Credits" type="Button" parent="Opciones"]
layout_mode = 2
text = "BOTON_CREDITOS"

[node name="Volver" type="Button" parent="Opciones"]
layout_mode = 2
text = "MENU_PRINCIPAL"

[node name="Menu" type="VBoxContainer" parent="."]
show_behind_parent = true
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -50.5
offset_right = 76.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Continuar" type="Button" parent="Menu"]
visible = false
layout_mode = 2
text = "BOTON_CONTINUAR"

[node name="Empezar" type="Button" parent="Menu"]
layout_mode = 2
text = "BOTON_EMPEZAR"

[node name="Tutorial" type="Button" parent="Menu"]
visible = false
layout_mode = 2
text = "TUTORIAL"

[node name="Opciones" type="Button" parent="Menu"]
layout_mode = 2
text = "BOTON_OPCIONES"

[node name="Salir" type="Button" parent="Menu"]
layout_mode = 2
text = "BOTON_SALIR"

[node name="Parallax2D2" type="Parallax2D" parent="."]
z_index = -1
scroll_offset = Vector2(-232, 108)
repeat_size = Vector2(340, 0)
autoscroll = Vector2(32, 0)
repeat_times = 5

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D2"]
position = Vector2(620, 456)
texture = ExtResource("3_5u8x2")

[node name="Sprite2D2" type="Sprite2D" parent="Parallax2D2"]
position = Vector2(533, 454)
texture = ExtResource("4_7xc4s")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -73.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_5u8x2")

[node name="Credits" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 1, 1, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Art:
https://the-pixel-nook.itch.io/parallax-backgrounds-demo
https://lucky-loops.itch.io/parallax-city-background
https://ibingames.itch.io/vector-arrow-icon-pack
https://kangjung.itch.io/pigeon-pixel
https://ankousse26.itch.io/free-pixel-art-drones
https://xyezawr.itch.io/free-pixel-effects-pack-4-explosions
https://bdragon1727.itch.io/fire-pixel-bullet-16x16
https://nicolemariet.itch.io/pixel-heart-animation-32x32-16x16-freebie
https://www.instagram.com/cubicoart/ 

Musica :
https://uppbeat.io/browse/artist/color-parade

"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="volver" type="Button" parent="Credits/RichTextLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = 175.5
offset_right = 87.0
offset_bottom = 206.5
grow_horizontal = 2
grow_vertical = 2
text = "MENU_PRINCIPAL"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.0941176, 0.0901961, 1)

[node name="RichTextLabel2" type="RichTextLabel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 66.0
offset_right = 1.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "TEXT_TUTORIAL"
fit_content = true
horizontal_alignment = 1

[node name="volver" type="Button" parent="ColorRect/RichTextLabel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -81.5
offset_right = 71.5
offset_bottom = -50.5
grow_horizontal = 2
grow_vertical = 2
text = "MENU_PRINCIPAL"

[connection signal="item_selected" from="Opciones/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Opciones/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Opciones/Volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="Menu/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Menu/Empezar" to="." method="_on_empezar_pressed"]
[connection signal="pressed" from="Menu/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Menu/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="Menu/Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Credits/RichTextLabel/volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="ColorRect/RichTextLabel2/volver" to="." method="_on_volver_pressed"]
